[package]
authors = ["Nathan Musoke <nathan.musoke@gmail.com>"]
name = "ipfs-search"
version = "0.1.0"

[dependencies]
clap = "2.31.2"
env_logger = "0.5.6"
failure = "0.1.1"
ipfsapi = "0.2.1"
log = "0.4.1"
mime = "0.3.5"
serde_json = "1.0.11"
tantivy = "0.5.1"
tempdir = "0.3.6"
tree_magic = "0.2.0"
